<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="bound_alpha">Bind to Alpha</string>
	<string name="find_and_scan">find and scan</string>
	<string name="btn_back">Back</string>
	<string name="scan_robot_qr">Scan the QR code of Alpha</string>
    <string name="device_history">The devices binded</string>
    <string name="save_qr">Save QR code</string>
    <string name="qr">QR code</string>
    <string name="other_bound">使用其他绑定方式</string>
    <string name="scan_robot_qr_bind">Scan the QR code to bind equiment </string>
</resources>