<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f7f7f8"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/lay_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_title_heigh"
        android:layout_alignParentTop="true"
        android:background="@color/top_title_red"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:visibility="visible" >

        <TextView
            style="@style/TopTitleText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/qr"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:minWidth="50dp"
            android:onClick="onBack"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/btn_back" />
        </LinearLayout>
    </RelativeLayout>

    

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_gravity="center_horizontal"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qrcode_image_margin_top"
            android:layout_marginLeft="@dimen/qrcode_image_margin_top"
            android:layout_marginRight="@dimen/qrcode_image_margin_top"
            android:padding="10dp"
            android:src="@null"
            android:layout_gravity="center"
            android:visibility="visible" />
       
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:visibility="visible" >
 <TextView
        android:id="@+id/alplah_no"
        style="@style/SecondTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="#55595c"
        android:visibility="visible" />
        <TextView
            android:id="@+id/scan_tips"
            style="@style/contentTitleText"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/qrcode_image_margin_top"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"

            android:gravity="center"
            android:layout_below="@id/alplah_no"
            android:text="@string/scan_robot_qr_bind"
            android:textColor="#8c94a7"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_save"
            style="@style/SecondTitleText"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_wifi_edittext_height"
            android:layout_alignLeft="@id/scan_tips"
            android:layout_alignRight="@id/scan_tips"
            android:layout_below="@id/scan_tips"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_geting"
            android:gravity="center"
            android:text="@string/save_qr"
            android:textColor="#55595c"
            android:textStyle="normal" />
    </RelativeLayout>

</LinearLayout>